<resources>
    <string name="app_name">Cure</string>
    <string name="action_settings">Settings</string>
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="address">Address:</string>
    <string name="name">Name</string>
    <string name="tag">Let\'s join us and \nBuild your relationship with others</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="user_name">Email or Phone</string>
    <string name="login_failure_title">Login Failed</string>
    <string name="login_invalid_credintial_err_messg">Login credential are not invalid.</string>
    <string name="login_failure_err_messg">Sorry, unable to login , please check your internet connectivity.</string>
    <string name="field_required_error_messg">This field is required.</string>
    <string name="processing">Processing</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="password_not_match_error_messg">Passwords do not match.</string>
    <string name="email_invalid_error_messg">Invalid email format.</string>
    <string name="phone_invalid_error_messg">Invalid phone format. (Ex. 249XXXXXXXXX)</string>
    <string name="register_failure_title">Register Failed</string>
    <string name="register_failur_err_messg">Sorry, unable to register , please check your internet connectivity.</string>
    <string name="register_user_exist_err_messg">A user with this Email/Phone already exists.Please try with another one.</string>
    <string name="register_success_title">Register Success</string>
    <string name="register_success_messg">You have been registered successfully.</string>
    <string name="register_success_clickToLogin">Click to Login</string>
    <string name="items_activity_title">Drugs list</string>
    <string name="items_activity_subtitle">%1$d Drugs</string>
    <string name="item_search">Search by Brand,Generic,Company,Country,etc.</string>
    <string name="item_brand_name">Brand Name</string>
    <string name="item_generic_name">Generic Name</string>
    <string name="item_manfac_company">Manufacture Company</string>
    <string name="item_search_button">Send search request</string>
    <string name="add_request_failure_title">Send Request Failed</string>
    <string name="add_request_err_messg">Sorry, unable to send the request , please check your internet connectivity and try again.</string>
    <string name="add_request_token_err_messg">Sorry, unable to send the request , please try again.</string>
    <string name="request_responses_activity_title">Search Result</string>
    <string name="responses_empty_list">Waiting for pharmacies response&#8230;</string>
    <string name="requests_empty_list">There is no old requests to display.</string>
    <string name="requests_history">Requests history</string>
    <string name="DISTRICT_KAR">Khartoum</string>
    <string name="DISTRICT_NKR">North Kordofan</string>
    <string name="DISTRICT_NOR">Northern</string>
    <string name="DISTRICT_KAS">Kassala</string>
    <string name="DISTRICT_BNI">Blue Nile</string>
    <string name="DISTRICT_NDA">North Darfur</string>
    <string name="DISTRICT_SDA">South Darfur</string>
    <string name="DISTRICT_SKR">South Kordofan</string>
    <string name="DISTRICT_GEZ">Gezira</string>
    <string name="DISTRICT_WNI">White Nile</string>
    <string name="DISTRICT_RNI">River Nile</string>
    <string name="DISTRICT_RSE">Red Sea</string>
    <string name="DISTRICT_ALQ">Al Qadarif</string>
    <string name="DISTRICT_SEN">Sennar</string>
    <string name="DISTRICT_WDA">West Darfur</string>
    <string name="DISTRICT_CDA">Central Darfur</string>
    <string name="DISTRICT_EDA">East Darfur</string>
    <string name="DISTRICT_WKE">West Kordofan</string>
    <string name="COUNTRY_AF">Afghanistan</string>
    <string name="COUNTRY_AX">Åland Islands</string>
    <string name="COUNTRY_AL">Albania</string>
    <string name="COUNTRY_DZ">Algeria</string>
    <string name="COUNTRY_AS">American Samoa</string>
    <string name="COUNTRY_AD">Andorra</string>
    <string name="COUNTRY_AO">Angola</string>
    <string name="COUNTRY_AI">Anguilla</string>
    <string name="COUNTRY_AQ">Antarctica</string>
    <string name="COUNTRY_AG">Antigua and Barbuda</string>
    <string name="COUNTRY_AR">Argentina</string>
    <string name="COUNTRY_AM">Armenia</string>
    <string name="COUNTRY_AW">Aruba</string>
    <string name="COUNTRY_AU">Australia</string>
    <string name="COUNTRY_AT">Austria</string>
    <string name="COUNTRY_AZ">Azerbaijan</string>
    <string name="COUNTRY_BS">Bahamas</string>
    <string name="COUNTRY_BH">Bahrain</string>
    <string name="COUNTRY_BD">Bangladesh</string>
    <string name="COUNTRY_BB">Barbados</string>
    <string name="COUNTRY_BY">Belarus</string>
    <string name="COUNTRY_BE">Belgium</string>
    <string name="COUNTRY_BZ">Belize</string>
    <string name="COUNTRY_BJ">Benin</string>
    <string name="COUNTRY_BM">Bermuda</string>
    <string name="COUNTRY_BT">Bhutan</string>
    <string name="COUNTRY_BO">Bolivia</string>
    <string name="COUNTRY_BQ">Bonaire</string>
    <string name="COUNTRY_BA">Bosnia and Herzegovina</string>
    <string name="COUNTRY_BW">Botswana</string>
    <string name="COUNTRY_BV">Bouvet Island</string>
    <string name="COUNTRY_BR">Brazil</string>
    <string name="COUNTRY_IO">British Indian Ocean Territory</string>
    <string name="COUNTRY_BN">Brunei Darussalam</string>
    <string name="COUNTRY_BG">Bulgaria</string>
    <string name="COUNTRY_BF">Burkina Faso</string>
    <string name="COUNTRY_BI">Burundi</string>
    <string name="COUNTRY_CV">Cabo Verde</string>
    <string name="COUNTRY_KH">Cambodia</string>
    <string name="COUNTRY_CM">Cameroon</string>
    <string name="COUNTRY_CA">Canada</string>
    <string name="COUNTRY_KY">Cayman Islands</string>
    <string name="COUNTRY_CF">Central African Republic</string>
    <string name="COUNTRY_TD">Chad</string>
    <string name="COUNTRY_CL">Chile</string>
    <string name="COUNTRY_CN">China</string>
    <string name="COUNTRY_CX">Christmas Island</string>
    <string name="COUNTRY_CC">Cocos (Keeling) Islands</string>
    <string name="COUNTRY_CO">Colombia</string>
    <string name="COUNTRY_KM">Comoros</string>
    <string name="COUNTRY_CG">Congo</string>
    <string name="COUNTRY_CD">Congo</string>
    <string name="COUNTRY_CK">Cook Islands</string>
    <string name="COUNTRY_CR">Costa Rica</string>
    <string name="COUNTRY_HR">Croatia</string>
    <string name="COUNTRY_CU">Cuba</string>
    <string name="COUNTRY_CW">Curaçao</string>
    <string name="COUNTRY_CY">Cyprus</string>
    <string name="COUNTRY_CZ">Czechia</string>
    <string name="COUNTRY_DK">Denmark</string>
    <string name="COUNTRY_DJ">Djibouti</string>
    <string name="COUNTRY_DM">Dominica</string>
    <string name="COUNTRY_DO">Dominican Republic</string>
    <string name="COUNTRY_EC">Ecuador</string>
    <string name="COUNTRY_EG">Egypt</string>
    <string name="COUNTRY_SV">El Salvador</string>
    <string name="COUNTRY_GQ">Equatorial Guinea</string>
    <string name="COUNTRY_ER">Eritrea</string>
    <string name="COUNTRY_EE">Estonia</string>
    <string name="COUNTRY_SZ">Eswatini</string>
    <string name="COUNTRY_ET">Ethiopia</string>
    <string name="COUNTRY_FK">Falkland Islands</string>
    <string name="COUNTRY_FO">Faroe Islands</string>
    <string name="COUNTRY_FJ">Fiji</string>
    <string name="COUNTRY_FI">Finland</string>
    <string name="COUNTRY_FR">France</string>
    <string name="COUNTRY_GF">French Guiana</string>
    <string name="COUNTRY_PF">French Polynesia</string>
    <string name="COUNTRY_TF">French Southern Territories</string>
    <string name="COUNTRY_GA">Gabon</string>
    <string name="COUNTRY_GM">Gambia</string>
    <string name="COUNTRY_GE">Georgia</string>
    <string name="COUNTRY_DE">Germany</string>
    <string name="COUNTRY_GH">Ghana</string>
    <string name="COUNTRY_GI">Gibraltar</string>
    <string name="COUNTRY_GR">Greece</string>
    <string name="COUNTRY_GL">Greenland</string>
    <string name="COUNTRY_GD">Grenada</string>
    <string name="COUNTRY_GP">Guadeloupe</string>
    <string name="COUNTRY_GU">Guam</string>
    <string name="COUNTRY_GT">Guatemala</string>
    <string name="COUNTRY_GG">Guernsey</string>
    <string name="COUNTRY_GN">Guinea</string>
    <string name="COUNTRY_GW">Guinea-Bissau</string>
    <string name="COUNTRY_GY">Guyana</string>
    <string name="COUNTRY_HT">Haiti</string>
    <string name="COUNTRY_HM">Heard Island and McDonald Islands</string>
    <string name="COUNTRY_VA">Holy See</string>
    <string name="COUNTRY_HN">Honduras</string>
    <string name="COUNTRY_HK">Hong Kong</string>
    <string name="COUNTRY_HU">Hungary</string>
    <string name="COUNTRY_IS">Iceland</string>
    <string name="COUNTRY_IN">India</string>
    <string name="COUNTRY_ID">Indonesia</string>
    <string name="COUNTRY_IR">Iran</string>
    <string name="COUNTRY_IQ">Iraq</string>
    <string name="COUNTRY_IE">Ireland</string>
    <string name="COUNTRY_IM">Isle of Man</string>
    <string name="COUNTRY_IL">Israel</string>
    <string name="COUNTRY_IT">Italy</string>
    <string name="COUNTRY_JM">Jamaica</string>
    <string name="COUNTRY_JP">Japan</string>
    <string name="COUNTRY_JE">Jersey</string>
    <string name="COUNTRY_JO">Jordan</string>
    <string name="COUNTRY_KZ">Kazakhstan</string>
    <string name="COUNTRY_KE">Kenya</string>
    <string name="COUNTRY_KI">Kiribati</string>
    <string name="COUNTRY_KP">Korea</string>
    <string name="COUNTRY_KR">Korea</string>
    <string name="COUNTRY_KW">Kuwait</string>
    <string name="COUNTRY_KG">Kyrgyzstan</string>
    <string name="COUNTRY_LA">Lao</string>
    <string name="COUNTRY_LV">Latvia</string>
    <string name="COUNTRY_LB">Lebanon</string>
    <string name="COUNTRY_LS">Lesotho</string>
    <string name="COUNTRY_LR">Liberia</string>
    <string name="COUNTRY_LY">Libya</string>
    <string name="COUNTRY_LI">Liechtenstein</string>
    <string name="COUNTRY_LT">Lithuania</string>
    <string name="COUNTRY_LU">Luxembourg</string>
    <string name="COUNTRY_MO">Macao</string>
    <string name="COUNTRY_MG">Madagascar</string>
    <string name="COUNTRY_MW">Malawi</string>
    <string name="COUNTRY_MY">Malaysia</string>
    <string name="COUNTRY_MV">Maldives</string>
    <string name="COUNTRY_ML">Mali</string>
    <string name="COUNTRY_MT">Malta</string>
    <string name="COUNTRY_MH">Marshall Islands</string>
    <string name="COUNTRY_MQ">Martinique</string>
    <string name="COUNTRY_MR">Mauritania</string>
    <string name="COUNTRY_MU">Mauritius</string>
    <string name="COUNTRY_YT">Mayotte</string>
    <string name="COUNTRY_MX">Mexico</string>
    <string name="COUNTRY_FM">Micronesia</string>
    <string name="COUNTRY_MD">Moldova</string>
    <string name="COUNTRY_MC">Monaco</string>
    <string name="COUNTRY_MN">Mongolia</string>
    <string name="COUNTRY_ME">Montenegro</string>
    <string name="COUNTRY_MS">Montserrat</string>
    <string name="COUNTRY_MA">Morocco</string>
    <string name="COUNTRY_MZ">Mozambique</string>
    <string name="COUNTRY_MM">Myanmar</string>
    <string name="COUNTRY_NA">Namibia</string>
    <string name="COUNTRY_NR">Nauru</string>
    <string name="COUNTRY_NP">Nepal</string>
    <string name="COUNTRY_NL">Netherlands</string>
    <string name="COUNTRY_NC">New Caledonia</string>
    <string name="COUNTRY_NZ">New Zealand</string>
    <string name="COUNTRY_NI">Nicaragua</string>
    <string name="COUNTRY_NE">Niger</string>
    <string name="COUNTRY_NG">Nigeria</string>
    <string name="COUNTRY_NU">Niue</string>
</resources>