<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SendRequestActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/item_brand_name"
            android:textSize="20sp"
            style="@style/fontFamilyBoldStyle"/>

        <TextView
            android:id="@+id/item_brand_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="TextView"
            android:textSize="17sp"
            android:fontFamily="@font/roboto_regular"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/item_generic_name"
            android:textSize="20sp"
            style="@style/fontFamilyBoldStyle"/>

        <TextView
            android:id="@+id/item_generic_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="TextView"
            android:textSize="17sp"
            android:fontFamily="@font/roboto_regular"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/item_manfac_company"
            android:textSize="20sp"
            style="@style/fontFamilyBoldStyle"/>


        <TextView
            android:id="@+id/item_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="TextView"
            android:textSize="17sp"
            android:fontFamily="@font/roboto_regular"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_send_request"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom= "true"
        android:background="@drawable/btn_custom"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:textColor="@android:color/white"
        android:text="@string/item_search_button"
        app:icon="@android:drawable/ic_search_category_default"
        style="@style/ButtonIcontyle"/>

</RelativeLayout>