<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.LoginFragment">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="50sp"
                style="@style/fontFamilyStyle"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:layout_above="@id/tv_subtitle"/>

            <TextView
                android:id="@+id/tv_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tag"
                android:textSize="17sp"
                style="@style/fontFamilyStyle"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginBottom="50dp"
                android:layout_above="@id/et_login_username"/>

            <EditText
                android:id="@+id/et_login_username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/user_name"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:padding="10dp"
                android:inputType="textEmailAddress"
                style="@style/fontFamilyStyle"
                android:layout_above="@id/et_login_password"
                android:background="@drawable/edxt_custom"/>

            <EditText
                android:id="@+id/et_login_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/password"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                style="@style/fontFamilyStyle"
                android:inputType="textPassword"
                android:layout_centerInParent="true"
                android:background="@drawable/edxt_custom"/>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_login_password"
                android:background="@drawable/btn_custom"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"
                style="@style/fontFamilyStyle"
                android:textColor="@android:color/white"
                android:text="@string/login" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:src="@drawable/ic_arrow_right"
                android:contentDescription="Swipe Image"/>

            <TextView
                style="@style/fontFamilyStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:text="@string/swipe_left_for_register"
                android:textSize="15sp"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>